Revision history for HTML::Forms

          - Links displayed as buttons get animation
          - Toggle code cleanup
          - Replaced maps with variables in CSS
          - Pixel aligned labels and input fields
          - Moved form messages after form info
          - Uses CSS grid for form layout
          - Serialise href attr. Toggle.js unrequires hidden fields
          - Datastructure field has add/remove callbacks
          - Buttons can display as icons
          - Changed event register method name in JS utils
          - Added some more POD
          - Completed placeholders for POD
          - Shiny buttons for DataStructure
          - Added number of pages and page size to renderer
          - Only 20 more field classes to add POD boilerplate
          - All POD boilerplate except for field classes
          - More POD link fixes
          - Fixes POD links in markdown
          - Completed first pass at POD in HTML::Forms
          - Renamed JS files
          - Supports multipage forms
          - DataStructure rows can now be readonly
          - Adds more JS rendered field types
          - Adds EmptyDiv for JS rendering
          - Field constructors for attributes now methods not functions
          - Just throw exceptions from Manager
          - Field default_over_obj now just a bool
          - Moves get_body_parameters to Context
          - Moved onReady function to utils
          - Buttons now position on the right when required
          - Renames JS files
          - Adds drag title and icons to DataStructure field type
          - Adds Selector field type
          - Adds reveal password
          - Moves repeatable JS to utils
          - Inline server field validation
          - Shiny buttons
          - Adding Digits field type
          - Better error messages
          - Renamed Forms before/after build to before/after build fields
          - Regenerate meta data
          - Adds empty English lexicon