@@ -58,7 +58,7 @@
 form.classic {
     background: #colours[panel-bg]; border-radius: 5px;
     box-shadow: 3px 3px 3px; color: #colours[line]; display: inline-block;
-    padding-bottom: 0.25rem; position: relative;
+    position: relative;
     div {
         color: #colours[text];
     }
@@ -69,7 +69,7 @@ form.classic {
         display: none;
     }
     .form-wrapper {
-        border-radius: 5px; padding: 0 1rem; position: relative;
+        border-radius: 5px; padding: 0 1rem 0.25rem 1rem; position: relative;
         .form-title {
             color: #colours[text]; font-family: #fonts[system];
             margin-left: -2px;
@@ -80,21 +80,35 @@ form.classic {
             max-width: @field-max-width;
         }
     }
+    .form-page > .alert-info, .form-wrapper > .alert-info, & > .alert-info {
+        padding-bottom: 0.5rem;
+    }
     .form-wrapper:has(.input-field span.field-label) .input-button button {
         margin-top: 1rem;
     }
     .input-field:has(label.field-label) {
-        align-items: flex-start; column-gap: 0.5rem; display: grid;
+        align-items: baseline; column-gap: 0.5rem; display: grid;
         grid-template-columns: @label-width min-content auto;
         grid-template-areas: "label input selector" "label alert alert";
         justify-items: start; min-width: @field-min-width;
-        row-gap: 0.25rem;
     }
     .input-field.label-right:has(label.field-label) {
         grid-template-columns: min-content auto @label-width;
         grid-template-areas: "selector input label" "alert alert label";
         input, select, span, textarea {
             justify-self: end;
+        }
+    }
+    .input-field.hide {
+        display: none !important; opacity: 0;
+    }
+    .input-field.inline:not(.hide) {
+        display: inline-grid !important; margin-right: 0.5rem;
+        &:not(.input-datastructure):has(label.field-label) {
+            grid-template-columns: min-content min-content auto !important;
+        }
+        .input-field {
+            padding-bottom: 0;
         }
     }
     .input-field:has(span.digit-input-wrapper) .field-label::after,
@@ -139,7 +153,7 @@ form.classic {
         content: ''; display: block; height: 22px;
     }
     .input-field {
-        padding-bottom: 0.5rem; position: relative;
+        padding-bottom: 0.75rem; position: relative;
         input, select, textarea {
             border-radius: 5px; font-size: 0.85rem; font-family: #fonts[data];
             grid-area: input;
@@ -183,7 +197,8 @@ form.classic {
         }
         .alert {
             border-radius: 5px; display: block; font-size: 0.8rem;
-            grid-area: alert; max-width: @alert-max-width; padding: 0.5rem;
+            grid-area: alert; margin-top: 0.25rem; max-width: @alert-max-width;
+            padding: 0.25rem 0.5rem;
         }
         .alert-error {
             background: #colours[error-bg];
@@ -193,7 +208,7 @@ form.classic {
         }
         .field-label {
             font-family: #fonts[system]; font-size: 0.8rem; grid-area: label;
-            padding-top: 0.2rem; position: relative; white-space: nowrap;
+            position: relative; white-space: nowrap;
             .label-sep-after {
                 position: absolute; right: 0.25rem;
             }
@@ -204,16 +219,10 @@ form.classic {
             }
         }
     }
-    .input-field.inline {
-        display: inline-grid !important; margin-right: 0.5rem;
-    }
-    .input-field.hide {
-        display: none !important; opacity: 0;
-    }
     .input-boolean {
         .checkbox-wrapper {
             display: flex; grid-area: input; isolation: isolate;
-            padding-top: 0.2rem; position: relative;
+            padding: 2px 0; position: relative;
             input[type=checkbox] {
                 height: @checkbox-height; margin: 0; opacity: 0;
                 position: relative; width: @checkbox-width; z-index: 3;
@@ -223,7 +232,7 @@ form.classic {
             background: #grads[button-bg];
             border: 2px inset #colours[button-border]; border-radius: 10px;
             content: ''; display: block; position: absolute;
-            height: @checkbox-height; left: 0; top: 3px;
+            height: @checkbox-height; left: 0;
             width: @checkbox-knob-width; z-index: 2;
         }
         .checkbox-wrapper:has(input[type=checkbox]:checked)::after {
@@ -240,6 +249,9 @@ form.classic {
             background: #colours[checkbox-true-bg];
         }
     }
+    .input-boolean:has(.label-checkbox) {
+        align-items: center !important;
+    }
     .data-structure, .input-button, .input-selector {
         isolation: isolate;
         button, a.form-button {
@@ -253,7 +265,8 @@ form.classic {
             transition: border 0.5s, color 0.5s;
             span, svg {
                 font-size: 0.7rem; letter-spacing: 0.1rem; position: relative;
-                text-decoration: none; text-transform: uppercase; z-index: 3;
+                text-decoration: none; text-transform: uppercase;
+                white-space: nowrap; z-index: 3;
             }
             span.icon-wrapper {
                 display: block;
@@ -289,14 +302,18 @@ form.classic {
     .input-button.expand button {
         flex: 2;
     }
-    .input-button.inline {
-        display: inline-flex;
-    }
     .input-button.right {
         margin-right: 0; position: absolute; right: 0.5rem;
     }
     .input-selector button {
         grid-area: selector;
+    }
+    .input-display span {
+        font-size: 0.8rem; grid-area: input; padding: 0.25rem 0.35rem;
+        white-space: nowrap;
+    }
+    .input-display:has(img) {
+        align-items: flex-start !important;
     }
     .input-duration .input-select-integer, .input-interval .input-group,
     .input-repeatable div, .input-time-with-zone .input-group {
@@ -345,9 +362,17 @@ form.classic {
     .input-password .reveal {
         cursor: pointer; grid-area: selector;
     }
-    .input-display span {
-        font-size: 0.8rem; grid-area: input; padding: 0.2rem 0.35rem;
-        white-space: nowrap;
+    .input-select:has(label.select-multiple) {
+        align-items: flex-start !important; padding-bottom: 0.25rem;
+        label.select-multiple {
+            padding-top: 2px;
+        }
+    }
+    .input-textarea:has(.field-label) {
+        align-items: flex-start !important;
+        .field-label {
+            padding-top: 3px;
+        }
     }
     .page-list {
         list-style-type: none; margin: 0; padding: 0 0 0.5rem 0;
@@ -458,7 +483,7 @@ form.classic.filemanager {
     }
 }
 .form-messages {
-    display: inline-flex; flex-direction: column; padding-bottom: 0.5rem;
+    display: none;
     .alert {
         .card {
             font-family: #fonts[data]; margin-top: 0.25rem;
@@ -480,6 +505,9 @@ form.classic.filemanager {
     .alert-error, .alert-error-message {
         margin-left: -0.25rem;
     }
+}
+.form-messages:has(span) {
+    display: inline-flex; flex-direction: column; padding-bottom: 0.25rem;
 }
 .selector form.classic {
     box-shadow: none; margin: 0; min-width: @selector-min-width;
